test/Fail/TypeBasedTermination/NoSizePreservation.err
TypeBasedTermination/NoSizePreservation.agda:14.1-16.26: error: [TerminationIssue]
Termination checking failed for the following functions:
  foo
Problematic calls:
  foo (idn n)
    (at TypeBasedTermination/NoSizePreservation.agda:16.15-18)
